--- a/_index.md.template
+++ b/_index.md.template
@@ -1,5 +1,19 @@
 🚧⚠️网站正迁移至GitHub Pages中
 
+# 目录
+
+* ARTICLE_LINK_41
+  * ARTICLE_LINK_399
+  * ARTICLE_LINK_756
+  * ARTICLE_LINK_1361
+* ARTICLE_LINK_1031
+* ARTICLE_LINK_832
+* ARTICLE_LINK_769
+
+# 置顶
+
+ARTICLE_LINK_1521
+
 # 文章列表
 
 ARTICLE_LIST
